--- a/admin.html
+++ b/admin.html
@@ -1375,6 +1375,13 @@
     </div>
 
     <div
+      id="imageModal"
+      class="modal fixed inset-0 bg-black bg-opacity-75 hidden flex items-center justify-center p-4 z-50"
+    >
+      <img src="" alt="Vista ampliada" class="max-w-full max-h-full rounded-lg shadow-xl" />
+    </div>
+
+    <div
       id="alertModal"
       class="modal fixed inset-0 bg-gray-900 bg-opacity-50 hidden items-center justify-center p-4 z-50"
     >
