--- a/index.html
+++ b/index.html
@@ -27,6 +27,23 @@
         border-radius: 0.375rem;
         height: 0.75rem;
       }
+      /* Coverflow carousel styles */
+      #carouselContainer {
+        perspective: 1000px;
+      }
+      #carouselSlides {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        transform-style: preserve-3d;
+      }
+      .cover-slide {
+        transition: transform 0.5s, opacity 0.5s;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        transform-origin: center center;
+      }
     </style>
   </head>
   <body class="font-[Inter] bg-gray-100 text-gray-800">
@@ -106,11 +123,11 @@
       </div>
       <div
         id="carouselContainer"
-        class="relative w-full overflow-hidden mb-4 hidden"
+        class="relative w-full h-60 overflow-hidden mb-4 hidden"
       >
         <div
           id="carouselSlides"
-          class="flex transition-transform duration-500"
+          class="relative h-full w-full"
         ></div>
         <button
           id="carouselPrev"
