--- a/admin.html
+++ b/admin.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="Cross-Origin-Opener-Policy" content="same-origin-allow-popups" />
     <meta
       name="description"
       content="Aplicación para gestionar ventas de tenis, ropa y accesorios en la tienda CyJ"
