Asignar foto por SKU

--- a/admin.html
+++ b/admin.html
@@ -824,19 +824,9 @@
               rows="3"
             ></textarea>
           </div>
-          <input
-            type="file"
-            id="inventarioFotoFile"
-            accept="image/*"
-            class="w-full p-3 border border-gray-300 rounded-lg"
-          />
-          <button
-            type="button"
-            id="removeFotoBtn"
-            class="mt-2 px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700"
-          >
-            Eliminar Foto
-          </button>
+          <p class="text-sm text-gray-600">
+            La foto del producto se asignará automáticamente según el SKU.
+          </p>
             <div class="flex space-x-4">
               <input
                 type="number"
