Mostrar enlace de foto en edición de producto

--- a/admin.html
+++ b/admin.html
@@ -825,9 +825,15 @@
             ></textarea>
           </div>
           <p class="text-sm text-gray-600">
-            La foto del producto se asignará automáticamente según el SKU.
+            La foto del producto se asigna automáticamente según el SKU. Puedes copiar o editar el enlace.
           </p>
-            <div class="flex space-x-4">
+          <input
+            type="text"
+            id="inventarioFoto"
+            class="w-full p-3 border border-gray-300 rounded-lg text-sm mt-1"
+            placeholder="URL de la foto"
+          />
+          <div class="flex space-x-4">
               <input
                 type="number"
                 step="0.01"
