Add Google Images search button

--- a/admin.html
+++ b/admin.html
@@ -827,6 +827,13 @@
           <p class="text-sm text-gray-600">
             La foto del producto se asigna automáticamente según el SKU. Puedes copiar o editar el enlace.
           </p>
+          <button
+            type="button"
+            id="searchImageBtn"
+            class="text-xs bg-indigo-100 text-indigo-700 font-semibold px-2 py-1 rounded-md hover:bg-indigo-200 mb-2"
+          >
+            🔍 Buscar Imagen
+          </button>
           <input
             type="text"
             id="inventarioFoto"
