--- a/admin.html
+++ b/admin.html
@@ -721,22 +721,34 @@
                 id="inventarioMarca"
                 list="marcasList"
                 placeholder="Marca (ej. NIKE)"
-                class="w-[33%] p-3 border border-gray-300 rounded-lg uppercase"
+                class="w-[30%] p-3 border border-gray-300 rounded-lg uppercase"
                 required
               />
               <input
                 type="text"
                 id="inventarioModelo"
                 placeholder="Modelo (Ej. AIR FORCE 1)"
-                class="w-[66%] p-3 border border-gray-300 rounded-lg uppercase"
+                class="w-[70%] p-3 border border-gray-300 rounded-lg uppercase"
                 required
               />
+            </div>
+            <div class="flex flex-wrap gap-4 mt-4">
               <input
                 type="text"
                 id="inventarioNumeroModelo"
                 placeholder="Nº de Modelo"
-                class="w-[40%] p-3 border border-gray-300 rounded-lg uppercase"
+                class="w-[35%] p-3 border border-gray-300 rounded-lg uppercase"
               />
+              <select
+                id="inventarioCategoria"
+                class="w-[65%] p-3 border border-gray-300 rounded-lg"
+                required
+              >
+                <option value="" disabled selected>Categoría...</option>
+                <option value="Tenis">Tenis</option>
+                <option value="Ropa">Ropa</option>
+                <option value="Accesorios">Accesorios</option>
+              </select>
             </div>
             <datalist id="marcasList"></datalist>
             <input
@@ -745,29 +757,17 @@
               placeholder="Código SKU"
               class="w-[30%] p-3 border border-gray-300 rounded-lg uppercase"
             />
-            <select
-              id="inventarioCategoria"
-              class="w-[50%] p-3 border border-gray-300 rounded-lg"
-              required
-            >
-              <option value="" disabled selected>Categoría...</option>
-              <option value="Tenis">Tenis</option>
-              <option value="Ropa">Ropa</option>
-              <option value="Accesorios">Accesorios</option>
-            </select>
-            <div class="flex items-center">
+            <div class="flex flex-wrap gap-4 mt-4">
               <input
                 type="text"
                 id="inventarioTalla"
                 placeholder="Talla"
-                class="w-[30%] p-3 border border-gray-300 rounded-lg uppercase"
+                class="w-[20%] p-3 border border-gray-300 rounded-lg uppercase"
                 required
               />
-            </div>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
               <select
                 id="inventarioGenero"
-                class="w-full p-3 border border-gray-300 rounded-lg"
+                class="w-[40%] p-3 border border-gray-300 rounded-lg"
                 required
               >
                 <option value="" disabled selected>Género...</option>
@@ -777,7 +777,7 @@
               </select>
               <select
                 id="inventarioEstilo"
-                class="w-full p-3 border border-gray-300 rounded-lg"
+                class="w-[40%] p-3 border border-gray-300 rounded-lg"
                 required
               >
                 <option value="" disabled selected>Estilo...</option>
@@ -852,15 +852,17 @@
                 required
               />
             </div>
-            <div class="flex items-center space-x-2 mt-2">
-              <input
-                type="checkbox"
-                id="inventarioDescuentoActivo"
-                class="h-4 w-4"
-              />
-              <label for="inventarioDescuentoActivo" class="text-sm"
-                >Activar Descuento</label
-              >
+            <div class="flex flex-wrap gap-4 items-center mt-2">
+              <div class="flex items-center w-1/2">
+                <input
+                  type="checkbox"
+                  id="inventarioDescuentoActivo"
+                  class="h-4 w-4 mr-2"
+                />
+                <label for="inventarioDescuentoActivo" class="text-sm"
+                  >Activar Descuento</label
+                >
+              </div>
               <input
                 type="number"
                 step="0.01"
@@ -868,7 +870,7 @@
                 max="100"
                 id="inventarioPorcentajeDescuento"
                 placeholder="%"
-                class="w-20 p-2 border border-gray-300 rounded-lg"
+                class="w-1/2 p-2 border border-gray-300 rounded-lg"
               />
             </div>
           </div>
