--- a/admin.html
+++ b/admin.html
@@ -715,79 +715,73 @@
         <form id="inventarioForm">
           <input type="hidden" id="inventarioId" />
           <div class="space-y-4">
-            <div class="flex flex-wrap gap-4">
-              <input
-                type="text"
-                id="inventarioMarca"
-                list="marcasList"
-                placeholder="Marca (ej. NIKE)"
-                class="w-[30%] p-3 border border-gray-300 rounded-lg uppercase"
-                required
-              />
-              <input
-                type="text"
-                id="inventarioModelo"
-                placeholder="Modelo (Ej. AIR FORCE 1)"
-                class="w-[70%] p-3 border border-gray-300 rounded-lg uppercase"
-                required
-              />
-            </div>
-            <div class="flex flex-wrap gap-4 mt-4">
-              <input
-                type="text"
-                id="inventarioNumeroModelo"
-                placeholder="Nº de Modelo"
-                class="w-[35%] p-3 border border-gray-300 rounded-lg uppercase"
-              />
-              <select
-                id="inventarioCategoria"
-                class="w-[65%] p-3 border border-gray-300 rounded-lg"
-                required
-              >
-                <option value="" disabled selected>Categoría...</option>
-                <option value="Tenis">Tenis</option>
-                <option value="Ropa">Ropa</option>
-                <option value="Accesorios">Accesorios</option>
-              </select>
-            </div>
+            <input
+              type="text"
+              id="inventarioMarca"
+              list="marcasList"
+              placeholder="Marca (ej. NIKE)"
+              class="w-full p-3 border border-gray-300 rounded-lg uppercase"
+              required
+            />
+            <input
+              type="text"
+              id="inventarioModelo"
+              placeholder="Modelo (Ej. AIR FORCE 1)"
+              class="w-full p-3 border border-gray-300 rounded-lg uppercase"
+              required
+            />
+            <input
+              type="text"
+              id="inventarioNumeroModelo"
+              placeholder="Nº de Modelo"
+              class="w-full p-3 border border-gray-300 rounded-lg uppercase"
+            />
+            <select
+              id="inventarioCategoria"
+              class="w-full p-3 border border-gray-300 rounded-lg"
+              required
+            >
+              <option value="" disabled selected>Categoría...</option>
+              <option value="Tenis">Tenis</option>
+              <option value="Ropa">Ropa</option>
+              <option value="Accesorios">Accesorios</option>
+            </select>
             <datalist id="marcasList"></datalist>
             <input
               type="text"
               id="inventarioSku"
               placeholder="Código SKU"
-              class="w-[30%] p-3 border border-gray-300 rounded-lg uppercase"
+              class="w-full p-3 border border-gray-300 rounded-lg uppercase"
             />
-            <div class="flex flex-wrap gap-4 mt-4">
-              <input
-                type="text"
-                id="inventarioTalla"
-                placeholder="Talla"
-                class="w-[20%] p-3 border border-gray-300 rounded-lg uppercase"
-                required
-              />
-              <select
-                id="inventarioGenero"
-                class="w-[40%] p-3 border border-gray-300 rounded-lg"
-                required
-              >
-                <option value="" disabled selected>Género...</option>
-                <option value="Hombre">Hombre</option>
-                <option value="Mujer">Mujer</option>
-                <option value="Unisex">Unisex</option>
-              </select>
-              <select
-                id="inventarioEstilo"
-                class="w-[40%] p-3 border border-gray-300 rounded-lg"
-                required
-              >
-                <option value="" disabled selected>Estilo...</option>
-                <option value="Deportivo">Deportivo</option>
-                <option value="Casual">Casual</option>
-              </select>
-            </div>
+            <input
+              type="text"
+              id="inventarioTalla"
+              placeholder="Talla"
+              class="w-full p-3 border border-gray-300 rounded-lg uppercase"
+              required
+            />
+            <select
+              id="inventarioGenero"
+              class="w-full p-3 border border-gray-300 rounded-lg"
+              required
+            >
+              <option value="" disabled selected>Género...</option>
+              <option value="Hombre">Hombre</option>
+              <option value="Mujer">Mujer</option>
+              <option value="Unisex">Unisex</option>
+            </select>
+            <select
+              id="inventarioEstilo"
+              class="w-full p-3 border border-gray-300 rounded-lg"
+              required
+            >
+              <option value="" disabled selected>Estilo...</option>
+              <option value="Deportivo">Deportivo</option>
+              <option value="Casual">Casual</option>
+            </select>
             <select
               id="inventarioMaterial"
-              class="w-[50%] p-3 border border-gray-300 rounded-lg"
+              class="w-full p-3 border border-gray-300 rounded-lg"
               required
             >
               <option value="" disabled selected>Material Principal...</option>
@@ -834,45 +828,43 @@
             class="w-full p-3 border border-gray-300 rounded-lg text-sm mt-1"
             placeholder="URL de la foto"
           />
-          <div class="flex space-x-4">
+          <input
+            type="number"
+            step="0.01"
+            id="inventarioCosto"
+            placeholder="Costo (USD)"
+            class="w-full p-3 border border-gray-300 rounded-lg"
+            required
+          />
+          <input
+            type="number"
+            step="0.01"
+            id="inventarioPrecio"
+            placeholder="Precio Venta (MXN)"
+            class="w-full p-3 border border-gray-300 rounded-lg"
+            required
+          />
+          <div class="flex items-center space-x-4">
+            <div class="flex items-center">
               <input
-                type="number"
-                step="0.01"
-                id="inventarioCosto"
-                placeholder="Costo (USD)"
-                class="w-1/2 p-3 border border-gray-300 rounded-lg"
-                required
+                type="checkbox"
+                id="inventarioDescuentoActivo"
+                class="h-4 w-4 mr-2"
               />
-              <input
-                type="number"
-                step="0.01"
-                id="inventarioPrecio"
-                placeholder="Precio Venta (MXN)"
-                class="w-1/2 p-3 border border-gray-300 rounded-lg"
-                required
-              />
+              <label for="inventarioDescuentoActivo" class="text-sm"
+                >Activar Descuento</label
+              >
             </div>
-            <div class="flex flex-wrap gap-4 items-center mt-2">
-              <div class="flex items-center w-1/2">
-                <input
-                  type="checkbox"
-                  id="inventarioDescuentoActivo"
-                  class="h-4 w-4 mr-2"
-                />
-                <label for="inventarioDescuentoActivo" class="text-sm"
-                  >Activar Descuento</label
-                >
-              </div>
-              <input
-                type="number"
-                step="0.01"
-                min="0"
-                max="100"
-                id="inventarioPorcentajeDescuento"
-                placeholder="%"
-                class="w-1/2 p-2 border border-gray-300 rounded-lg"
-              />
-            </div>
+            <input
+              type="number"
+              step="0.01"
+              min="0"
+              max="100"
+              id="inventarioPorcentajeDescuento"
+              placeholder="%"
+              class="w-full p-2 border border-gray-300 rounded-lg"
+            />
+          </div>
           </div>
           <div class="flex justify-end mt-6 space-x-3">
             <button
