feat: show banner when public inventory needs update

--- a/admin.html
+++ b/admin.html
@@ -111,6 +111,13 @@
           onerror="this.onerror=null;this.src='https://placehold.co/1600x400/334155/e2e8f0?text=banner.jpg+no+encontrado';"
         />
         <div
+          id="publicInventoryBanner"
+          class="hidden bg-yellow-50 border-l-4 border-yellow-400 text-yellow-700 p-4 mt-4 rounded"
+        >
+          Inventario público desactualizado.
+          <a href="exportar.html" class="underline font-semibold">Actualizar</a>
+        </div>
+        <div
           class="mt-4 flex flex-col md:flex-row justify-between items-center"
         >
           <div class="flex items-center space-x-4">
