--- a/admin.html
+++ b/admin.html
@@ -303,7 +303,7 @@
                 <i class="fas fa-times-circle"></i>
               </button>
             </div>
-          <div class="flex gap-2">
+          <div class="flex flex-col-reverse md:flex-row gap-2">
             <button
               id="openInventarioModalBtn"
               class="w-full md:w-auto bg-green-600 hover:bg-green-700 text-white font-bold py-3 px-5 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-200 flex-shrink-0"
@@ -314,7 +314,7 @@
               id="publicInventoryBanner"
               href="exportar.html"
               target="_blank"
-              class="hidden w-full md:w-auto bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-3 px-5 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-200 flex-shrink-0"
+              class="hidden w-full md:w-auto bg-yellow-500 hover:bg-yellow-600 text-white font-bold py-3 px-5 rounded-lg shadow-md hover:shadow-lg transition-shadow duration-200 flex-shrink-0 block text-center"
               >Actualizar Inventario</a
             >
           </div>
