--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
       <section class="bg-white rounded-xl shadow-2xl p-4 mb-4">
         <p class="text-justify">
           Nuestros productos están pensados para acompañarte en cada aventura con toda la comodidad y resistencia que buscas.
-          Si quieres adquirirlos o resolver alguna duda ó buscas un modelo en especial, Escríbenos por WhatsApp con el modelo, talla y colores que deseas y con gusto lo encontraremos para ti.
+          Si quieres adquirirlos, resolver alguna duda ó buscas un modelo en especial, Escríbenos por WhatsApp con el modelo, talla y colores que deseas y con gusto lo encontraremos para ti.
           envíanos un mensaje y tendrás una atención personalizada.
         </p>
       </section>
