feat: add infinite carousel scroll

--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
       }
       .carousel {
         display: flex;
-        overflow-x: auto;
+        overflow: hidden;
         gap: 1rem;
-        scroll-snap-type: x mandatory;
         padding-bottom: 1rem;
       }
       .carousel-item {
